fixed individual recipe recipe-description text overflow

--- a/screen.css
+++ b/screen.css
@@ -111,7 +111,6 @@ a:visited {
 
 .meal p {
     margin: 27px 0;
-    color: #333333;
 }
 
 .about-me {
@@ -192,21 +191,14 @@ a:visited {
     margin: 0 150px 0 200px;
 }
 
-.recipe-text {
-    margin-left: 30px;
-    max-height: 610px;
-    width: auto;
-}
-
 .recipe-title {
     font-size: 70px;
-    margin: 60px 0 0 0;
+    margin: 0;
 }
 
 .recipe-desc {
     font-size: 35px;
     line-height: 1.5;
-    /* max-width: 800px; */
 }
 
 .recipe-img {
@@ -216,8 +208,6 @@ a:visited {
 }
 
 .prep p {
-    /* background: #B6CEB2; */
-    /* border: 2px solid #6d8269; */
     border-radius: 20px;
     text-align: center;
     gap: 1em;
@@ -258,6 +248,13 @@ a:visited {
 
 .ingredients-list {
     font-size: 30px;
+}
+
+.optional {
+    text-align: center;
+    font-size: 20px;
+    margin: 0;
+    color: #666666;
 }
 
 .personal-pics-header {
